Correlation Sessions Done

--- a/style.css
+++ b/style.css
@@ -120,13 +120,13 @@ body
     margin-top: 10px;
     display: block;
 }
-.carousel-inner
+#about .carousel-inner
 {
     min-height: 550px;
     max-height: fit-content;
     margin-bottom: 50px;
 }
-.carousel-inner .carousel-item .row
+#about .carousel-inner .carousel-item .row
 {
     margin-left: 40px;
     margin-right: 40px;
@@ -148,6 +148,7 @@ body
     display: block;
     margin-left: auto;
     margin-right: auto;
+    margin-bottom: 10px;
 }
 /*-----Correlation Sessions Section-----*/
 
@@ -216,6 +217,10 @@ body
     margin-right: auto;
     margin-top: 15px;
     display: block;
+}
+#correlationSessions .carousel-inner
+{
+    margin-bottom: 20px;
 }
 /*-----Contact Section-----*/
 #contact
